src/jan/presburger/PA2Parser.java
package jan.presburger;
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/kretinsk/Desktop/antlr/PA2.g 2010-11-25 14:02:21

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class PA2Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "NEG", "AND", "OR", "IMP", "EQV", "ALL", "EX", "EQ", "NEQ", "GEQ", "LEQ", "GT", "LT", "VAR", "INT", "WS", "'!'", "'('", "')'", "'+'", "'-'", "'A'", "'E'", "'&&'", "'||'", "'->'", "'<->'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'"
    };
    public static final int LT=18;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int INT=20;
    public static final int MINUS=5;
    public static final int AND=7;
    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=21;
    public static final int NEQ=14;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int EX=12;
    public static final int T__38=38;
    public static final int ALL=11;
    public static final int OR=8;
    public static final int NEG=6;
    public static final int IMP=9;
    public static final int GT=17;
    public static final int EQV=10;
    public static final int PLUS=4;
    public static final int VAR=19;
    public static final int GEQ=15;
    public static final int EQ=13;
    public static final int LEQ=16;

    // delegates
    // delegators


        public PA2Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PA2Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return PA2Parser.tokenNames; }
    public String getGrammarFileName() { return "/home/kretinsk/Desktop/antlr/PA2.g"; }


    public static class formula_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formula"
    // /home/kretinsk/Desktop/antlr/PA2.g:21:1: formula : ( linearpred | '!' formula -> ^( NEG[\"not\"] formula ) | '(' formula con formula ')' -> ^( con formula formula ) | quan VAR formula -> ^( quan VAR formula ) );
    public final PA2Parser.formula_return formula() throws RecognitionException {
        PA2Parser.formula_return retval = new PA2Parser.formula_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal2=null;
        Token char_literal4=null;
        Token char_literal8=null;
        Token VAR10=null;
        PA2Parser.linearpred_return linearpred1 = null;

        PA2Parser.formula_return formula3 = null;

        PA2Parser.formula_return formula5 = null;

        PA2Parser.con_return con6 = null;

        PA2Parser.formula_return formula7 = null;

        PA2Parser.quan_return quan9 = null;

        PA2Parser.formula_return formula11 = null;


        Object char_literal2_tree=null;
        Object char_literal4_tree=null;
        Object char_literal8_tree=null;
        Object VAR10_tree=null;
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
        RewriteRuleSubtreeStream stream_con=new RewriteRuleSubtreeStream(adaptor,"rule con");
        RewriteRuleSubtreeStream stream_quan=new RewriteRuleSubtreeStream(adaptor,"rule quan");
        RewriteRuleSubtreeStream stream_formula=new RewriteRuleSubtreeStream(adaptor,"rule formula");
        try {
            // /home/kretinsk/Desktop/antlr/PA2.g:22:3: ( linearpred | '!' formula -> ^( NEG[\"not\"] formula ) | '(' formula con formula ')' -> ^( con formula formula ) | quan VAR formula -> ^( quan VAR formula ) )
            int alt1=4;
            switch ( input.LA(1) ) {
            case VAR:
            case INT:
            case 25:
            case 26:
                {
                alt1=1;
                }
                break;
            case 22:
                {
                alt1=2;
                }
                break;
            case 23:
                {
                alt1=3;
                }
                break;
            case 27:
            case 28:
                {
                alt1=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }

            switch (alt1) {
                case 1 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:22:5: linearpred
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_linearpred_in_formula101);
                    linearpred1=linearpred();

                    state._fsp--;

                    adaptor.addChild(root_0, linearpred1.getTree());

                    }
                    break;
                case 2 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:23:5: '!' formula
                    {
                    char_literal2=(Token)match(input,22,FOLLOW_22_in_formula107);  
                    stream_22.add(char_literal2);

                    pushFollow(FOLLOW_formula_in_formula109);
                    formula3=formula();

                    state._fsp--;

                    stream_formula.add(formula3.getTree());


                    // AST REWRITE
                    // elements: formula
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 23:33: -> ^( NEG[\"not\"] formula )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:23:36: ^( NEG[\"not\"] formula )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(NEG, "not"), root_1);

                        adaptor.addChild(root_1, stream_formula.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:24:5: '(' formula con formula ')'
                    {
                    char_literal4=(Token)match(input,23,FOLLOW_23_in_formula140);  
                    stream_23.add(char_literal4);

                    pushFollow(FOLLOW_formula_in_formula142);
                    formula5=formula();

                    state._fsp--;

                    stream_formula.add(formula5.getTree());
                    pushFollow(FOLLOW_con_in_formula144);
                    con6=con();

                    state._fsp--;

                    stream_con.add(con6.getTree());
                    pushFollow(FOLLOW_formula_in_formula146);
                    formula7=formula();

                    state._fsp--;

                    stream_formula.add(formula7.getTree());
                    char_literal8=(Token)match(input,24,FOLLOW_24_in_formula148);  
                    stream_24.add(char_literal8);



                    // AST REWRITE
                    // elements: formula, formula, con
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 24:33: -> ^( con formula formula )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:24:36: ^( con formula formula )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_con.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_formula.nextTree());
                        adaptor.addChild(root_1, stream_formula.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:25:5: quan VAR formula
                    {
                    pushFollow(FOLLOW_quan_in_formula164);
                    quan9=quan();

                    state._fsp--;

                    stream_quan.add(quan9.getTree());
                    VAR10=(Token)match(input,VAR,FOLLOW_VAR_in_formula166);  
                    stream_VAR.add(VAR10);

                    pushFollow(FOLLOW_formula_in_formula168);
                    formula11=formula();

                    state._fsp--;

                    stream_formula.add(formula11.getTree());


                    // AST REWRITE
                    // elements: quan, VAR, formula
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 25:33: -> ^( quan VAR formula )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:25:36: ^( quan VAR formula )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_quan.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_VAR.nextNode());
                        adaptor.addChild(root_1, stream_formula.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "formula"

    public static class linearpred_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "linearpred"
    // /home/kretinsk/Desktop/antlr/PA2.g:28:1: linearpred : linearterm comp cons -> ^( comp cons linearterm ) ;
    public final PA2Parser.linearpred_return linearpred() throws RecognitionException {
        PA2Parser.linearpred_return retval = new PA2Parser.linearpred_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PA2Parser.linearterm_return linearterm12 = null;

        PA2Parser.comp_return comp13 = null;

        PA2Parser.cons_return cons14 = null;


        RewriteRuleSubtreeStream stream_comp=new RewriteRuleSubtreeStream(adaptor,"rule comp");
        RewriteRuleSubtreeStream stream_linearterm=new RewriteRuleSubtreeStream(adaptor,"rule linearterm");
        RewriteRuleSubtreeStream stream_cons=new RewriteRuleSubtreeStream(adaptor,"rule cons");
        try {
            // /home/kretinsk/Desktop/antlr/PA2.g:29:3: ( linearterm comp cons -> ^( comp cons linearterm ) )
            // /home/kretinsk/Desktop/antlr/PA2.g:29:5: linearterm comp cons
            {
            pushFollow(FOLLOW_linearterm_in_linearpred204);
            linearterm12=linearterm();

            state._fsp--;

            stream_linearterm.add(linearterm12.getTree());
            pushFollow(FOLLOW_comp_in_linearpred206);
            comp13=comp();

            state._fsp--;

            stream_comp.add(comp13.getTree());
            pushFollow(FOLLOW_cons_in_linearpred208);
            cons14=cons();

            state._fsp--;

            stream_cons.add(cons14.getTree());


            // AST REWRITE
            // elements: linearterm, cons, comp
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 29:26: -> ^( comp cons linearterm )
            {
                // /home/kretinsk/Desktop/antlr/PA2.g:29:29: ^( comp cons linearterm )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_comp.nextNode(), root_1);

                adaptor.addChild(root_1, stream_cons.nextTree());
                adaptor.addChild(root_1, stream_linearterm.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "linearpred"

    public static class linearterm_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "linearterm"
    // /home/kretinsk/Desktop/antlr/PA2.g:32:1: linearterm : linmon ( sgnlinmon )* ;
    public final PA2Parser.linearterm_return linearterm() throws RecognitionException {
        PA2Parser.linearterm_return retval = new PA2Parser.linearterm_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        PA2Parser.linmon_return linmon15 = null;

        PA2Parser.sgnlinmon_return sgnlinmon16 = null;



        try {
            // /home/kretinsk/Desktop/antlr/PA2.g:33:3: ( linmon ( sgnlinmon )* )
            // /home/kretinsk/Desktop/antlr/PA2.g:33:5: linmon ( sgnlinmon )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_linmon_in_linearterm234);
            linmon15=linmon();

            state._fsp--;

            adaptor.addChild(root_0, linmon15.getTree());
            // /home/kretinsk/Desktop/antlr/PA2.g:33:12: ( sgnlinmon )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=25 && LA2_0<=26)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/kretinsk/Desktop/antlr/PA2.g:33:13: sgnlinmon
            	    {
            	    pushFollow(FOLLOW_sgnlinmon_in_linearterm237);
            	    sgnlinmon16=sgnlinmon();

            	    state._fsp--;

            	    adaptor.addChild(root_0, sgnlinmon16.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "linearterm"

    public static class linmon_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "linmon"
    // /home/kretinsk/Desktop/antlr/PA2.g:36:1: linmon : ( ( '+' )? INT VAR -> ^( PLUS[\"+\"] INT VAR ) | '-' INT VAR -> ^( MINUS[\"-\"] INT VAR ) | ( '+' )? VAR -> ^( PLUS[\"+\"] INT[\"1\"] VAR ) | '-' VAR -> ^( MINUS[\"-\"] INT[\"1\"] VAR ) );
    public final PA2Parser.linmon_return linmon() throws RecognitionException {
        PA2Parser.linmon_return retval = new PA2Parser.linmon_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal17=null;
        Token INT18=null;
        Token VAR19=null;
        Token char_literal20=null;
        Token INT21=null;
        Token VAR22=null;
        Token char_literal23=null;
        Token VAR24=null;
        Token char_literal25=null;
        Token VAR26=null;

        Object char_literal17_tree=null;
        Object INT18_tree=null;
        Object VAR19_tree=null;
        Object char_literal20_tree=null;
        Object INT21_tree=null;
        Object VAR22_tree=null;
        Object char_literal23_tree=null;
        Object VAR24_tree=null;
        Object char_literal25_tree=null;
        Object VAR26_tree=null;
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");

        try {
            // /home/kretinsk/Desktop/antlr/PA2.g:37:3: ( ( '+' )? INT VAR -> ^( PLUS[\"+\"] INT VAR ) | '-' INT VAR -> ^( MINUS[\"-\"] INT VAR ) | ( '+' )? VAR -> ^( PLUS[\"+\"] INT[\"1\"] VAR ) | '-' VAR -> ^( MINUS[\"-\"] INT[\"1\"] VAR ) )
            int alt5=4;
            switch ( input.LA(1) ) {
            case 25:
                {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==VAR) ) {
                    alt5=3;
                }
                else if ( (LA5_1==INT) ) {
                    alt5=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
                }
                break;
            case INT:
                {
                alt5=1;
                }
                break;
            case 26:
                {
                int LA5_3 = input.LA(2);

                if ( (LA5_3==INT) ) {
                    alt5=2;
                }
                else if ( (LA5_3==VAR) ) {
                    alt5=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 3, input);

                    throw nvae;
                }
                }
                break;
            case VAR:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:37:5: ( '+' )? INT VAR
                    {
                    // /home/kretinsk/Desktop/antlr/PA2.g:37:5: ( '+' )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==25) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // /home/kretinsk/Desktop/antlr/PA2.g:37:5: '+'
                            {
                            char_literal17=(Token)match(input,25,FOLLOW_25_in_linmon254);  
                            stream_25.add(char_literal17);


                            }
                            break;

                    }

                    INT18=(Token)match(input,INT,FOLLOW_INT_in_linmon257);  
                    stream_INT.add(INT18);

                    VAR19=(Token)match(input,VAR,FOLLOW_VAR_in_linmon259);  
                    stream_VAR.add(VAR19);



                    // AST REWRITE
                    // elements: INT, VAR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 37:18: -> ^( PLUS[\"+\"] INT VAR )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:37:21: ^( PLUS[\"+\"] INT VAR )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PLUS, "+"), root_1);

                        adaptor.addChild(root_1, stream_INT.nextNode());
                        adaptor.addChild(root_1, stream_VAR.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:38:5: '-' INT VAR
                    {
                    char_literal20=(Token)match(input,26,FOLLOW_26_in_linmon277);  
                    stream_26.add(char_literal20);

                    INT21=(Token)match(input,INT,FOLLOW_INT_in_linmon280);  
                    stream_INT.add(INT21);

                    VAR22=(Token)match(input,VAR,FOLLOW_VAR_in_linmon282);  
                    stream_VAR.add(VAR22);



                    // AST REWRITE
                    // elements: INT, VAR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 38:18: -> ^( MINUS[\"-\"] INT VAR )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:38:21: ^( MINUS[\"-\"] INT VAR )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(MINUS, "-"), root_1);

                        adaptor.addChild(root_1, stream_INT.nextNode());
                        adaptor.addChild(root_1, stream_VAR.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:39:5: ( '+' )? VAR
                    {
                    // /home/kretinsk/Desktop/antlr/PA2.g:39:5: ( '+' )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==25) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /home/kretinsk/Desktop/antlr/PA2.g:39:5: '+'
                            {
                            char_literal23=(Token)match(input,25,FOLLOW_25_in_linmon299);  
                            stream_25.add(char_literal23);


                            }
                            break;

                    }

                    VAR24=(Token)match(input,VAR,FOLLOW_VAR_in_linmon302);  
                    stream_VAR.add(VAR24);



                    // AST REWRITE
                    // elements: VAR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 39:18: -> ^( PLUS[\"+\"] INT[\"1\"] VAR )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:39:21: ^( PLUS[\"+\"] INT[\"1\"] VAR )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PLUS, "+"), root_1);

                        adaptor.addChild(root_1, (Object)adaptor.create(INT, "1"));
                        adaptor.addChild(root_1, stream_VAR.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:40:5: '-' VAR
                    {
                    char_literal25=(Token)match(input,26,FOLLOW_26_in_linmon324);  
                    stream_26.add(char_literal25);

                    VAR26=(Token)match(input,VAR,FOLLOW_VAR_in_linmon327);  
                    stream_VAR.add(VAR26);



                    // AST REWRITE
                    // elements: VAR
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 40:18: -> ^( MINUS[\"-\"] INT[\"1\"] VAR )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:40:21: ^( MINUS[\"-\"] INT[\"1\"] VAR )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(MINUS, "-"), root_1);

                        adaptor.addChild(root_1, (Object)adaptor.create(INT, "1"));
                        adaptor.addChild(root_1, stream_VAR.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "linmon"

    public static class sgnlinmon_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "sgnlinmon"
    // /home/kretinsk/Desktop/antlr/PA2.g:43:1: sgnlinmon : ( '+' INT VAR -> ^( PLUS[\"+\"] INT VAR ) | '-' INT VAR -> ^( MINUS[\"-\"] INT VAR ) | '+' VAR -> ^( PLUS[\"+\"] INT[\"1\"] VAR ) | '-' VAR -> ^( MINUS[\"-\"] INT[\"1\"] VAR ) );
    public final PA2Parser.sgnlinmon_return sgnlinmon() throws RecognitionException {
        PA2Parser.sgnlinmon_return retval = new PA2Parser.sgnlinmon_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal27=null;
        Token INT28=null;
        Token VAR29=null;
        Token char_literal30=null;
        Token INT31=null;
        Token VAR32=null;
        Token char_literal33=null;
        Token VAR34=null;
        Token char_literal35=null;
        Token VAR36=null;

        Object char_literal27_tree=null;
        Object INT28_tree=null;
        Object VAR29_tree=null;
        Object char_literal30_tree=null;
        Object INT31_tree=null;
        Object VAR32_tree=null;
        Object char_literal33_tree=null;
        Object VAR34_tree=null;
        Object char_literal35_tree=null;
        Object VAR36_tree=null;
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_VAR=new RewriteRuleTokenStream(adaptor,"token VAR");
        RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
        RewriteRuleTokenStream stream_26=new RewriteRuleTokenStream(adaptor,"token 26");

        try {
            // /home/kretinsk/Desktop/antlr/PA2.g:44:3: ( '+' INT VAR -> ^( PLUS[\"+\"] INT VAR ) | '-' INT VAR -> ^( MINUS[\"-\"] INT VAR ) | '+' VAR -> ^( PLUS[\"+\"] INT[\"1\"] VAR ) | '-' VAR -> ^( MINUS[\"-\"] INT[\"1\"] VAR ) )
            int alt6=4;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==25) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==INT) ) {
                    alt6=1;
                }
                else if ( (LA6_1==VAR) ) {
                    alt6=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA6_0==26) ) {
                int LA6_2 = input.LA(2);

                if ( (LA6_2==INT) ) {
                    alt6=2;
                }
                else if ( (LA6_2==VAR) ) {
                    alt6=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 2, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:44:5: '+' INT VAR
                    {
                    char_literal27=(Token)match(input,25,FOLLOW_25_in_sgnlinmon358);  
                    stream_25.add(char_literal27);

                    INT28=(Token)match(input,INT,FOLLOW_INT_in_sgnlinmon360);  
                    stream_INT.add(INT28);

                    VAR29=(Token)match(input,VAR,FOLLOW_VAR_in_sgnlinmon362);  
                    stream_VAR.add(VAR29);



                    // AST REWRITE
                    // elements: VAR, INT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 44:17: -> ^( PLUS[\"+\"] INT VAR )
                    {
                        // /home/kretinsk/Desktop/antlr/PA2.g:44:20: ^( PLUS[\"+\"] INT VAR )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PLUS, "+"), root_1);

                        adaptor.addChild(root_1, stream_INT.nextNode());
                        adaptor.addChild(root_1, stream_VAR.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /home/kretinsk/Desktop/antlr/PA2.g:45:5: '-' INT VAR
                    {
                    char_literal30=(Token)match(input,26,FOLLOW_26_in_sgnlinmon380);  
                    stream_26.add(char_literal30);

                    INT31=(Token)match(input,INT,FOLLOW_INT_in_sgnlinmon382);  
                    stream_INT.add(INT31);

                    VAR32=(Token)match(input,VAR,FOLLOW_VAR_in_sgnlinmon384);  
                    stream_VAR.add(VAR32);



                    // AST REWRITE
                    // elements: VAR, INT
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
